Patch by Aron Rosenberg <arosenberg@logitech.com> on 2011-08-06 Reviewed by Benjamin Poulain.

[Qt] Fix build with Intel compiler on Windows
https://bugs.webkit.org/show_bug.cgi?id=65088

.:

Disable Intel Compiler warning 873 - function "" has no corresponding operator
delete (to be called if an exception is thrown during initialization of an
allocated object).

* Source/WebKit.pri:

Source/JavaScriptCore:

Intel compiler needs .lib suffixes instead of .a
Intel compiler doesn't support nullptr
Intel compiler supports unsized arrays

* JavaScriptCore.pri:
* jsc.cpp:
* wtf/ByteArray.h:
* wtf/NullPtr.h:

Source/WebCore:

Intel compiler needs .lib suffixes instead of .a

* WebCore.pri:

Source/WebKit2:

Intel compiler needs .lib suffixes instead of .a

* WebKit2.pri:

Canonical link: https://commits.webkit.org/81650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92555 268f45cc-cd09-0410-ab3c-d52691b4dbfc