Source/JavaScriptCore/wtf/ByteArray.h
@@ -91,7 +91,7 @@ namespace WTF {
 // MSVC can't handle correctly unsized array.
 // warning C4200: nonstandard extension used : zero-sized array in struct/union
 // Cannot generate copy-ctor or copy-assignment operator when UDT contains a zero-sized array
-#if COMPILER(MSVC)
+#if COMPILER(MSVC) && !COMPILER(INTEL)
         unsigned char m_data[INT_MAX];
 #else
         unsigned char m_data[];
