Source/WebKit2/WebKit2.pri
@@ -66,7 +66,7 @@ INCLUDEPATH = $$WEBKIT2_INCLUDEPATH $$WEBKIT2_GENERATED_SOURCES_DIR $$INCLUDEPAT
 defineTest(prependWebKit2Lib) {
     pathToWebKit2Output = $$ARGS/$$WEBKIT2_DESTDIR
 
-    win32-msvc*|wince* {
+    win32-msvc*|wince*|win32-icc {
         LIBS = -l$$WEBKIT2_TARGET $$LIBS
         LIBS = -L$$pathToWebKit2Output $$LIBS
         POST_TARGETDEPS += $${pathToWebKit2Output}$${QMAKE_DIR_SEP}$${WEBKIT2_TARGET}.lib
